feat: updates to run with configs
