# internal/studio/oas_studio.yaml
@@ -51,18 +51,11 @@ paths:
                 input:
                   type: string
                   description: The input spec for the source
-                target:
+                targets:
                   type: object
-                  properties:
-                    id:
-                      type: string
-                      description: The name of the target
-                    config:
-                      type: string
-                      description: the config file data
-                  required:
-                    - id
-                    - config
+                  additionalProperties:
+                    $ref: "#/components/schemas/TargetSpecificInputs"
+                  description: Map of target specific inputs keyed on target name
       responses:
         "200":
           description: Successful response
@@ -208,6 +201,14 @@ components:
         - gen_yaml_path
         - output_directory
         - language
+    TargetSpecificInputs:
+      type: object
+      properties:
+        config:
+          type: string
+          description: New contents of the gen.yaml file for this target
+      required:
+        - config
     SourceResponse:
       type: object
       properties:
